Grace/tests/gibbs/errors/t110.grace
// ERROR = P1002
import "io"

io.output.write("Hello there")
